scss/layout/_sideNavbar.scss
@use "../abstracts/variables";
@use "../abstracts/fonts";

.sideNavbar {
  display: none;
}

.pins {
  display: flex;
  justify-content: space-between;
}

.my-library {
  margin-bottom: 1.4rem;
}

@media (min-width: 768px) {
  .sideNavbar {
    background-color: variables.$bg-primary-desk;
    color: variables.$color-primary;
    display: flex;
    max-width: 24.8rem;
    width: 100%;
    height: 100vh;
    padding: 1.1rem 0.7rem 1.1rem 1.1rem;

    .sideNavbar ul li:nth-child(2) a,
    .sideNavbar ul li:nth-child(3) a {
      justify-content: s;
    }

    nav {
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 1.1rem;
    }

    ul {
      display: flex;
      flex-direction: column;
      gap: 1rem;

      li:nth-child(2) a,
      li:nth-child(3) a {
        justify-content: space-between;
      }
    }

    a {
      font-family: variables.$ff-satoshi;
      display: flex;
      align-items: center;
      gap: 1rem;
      width: 100%;
      transition: 0.3s;

      .pinwrap,
      .playlistwrap {
        display: flex;
        align-items: center;
      }

      span {
        font-size: variables.$fs-semimd-desk;
        margin-right: 2rem;
      }
    }
  }
}

a:hover {
  background-color: variables.$bg-secondary-dark;
  border-radius: 3px;
}

